# capture2go_sdk

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
capture2go/: __init__.py  ble.py  device.py  parsing.py  pkg.py  pkg.pyi  usb.py  utils.py
docs/: api.rst  api_pkg.rst  api_utils.rst  conf.py  examples.rst  getting_started.rst  index.rst  protocol.md
examples/: convert_to_mat.py  download.py  live_plot_example.py  minimal_print_example.py  realtime_streaming_example.py  recording_example.py
protocol/: Capture2Go_Communication_Protocol.md
